# obs-virtual-background

./: .gitignore  CMakeLists.txt  README.md
locale/: de-DE.ini  en-US.ini  zh-TW.ini
node_server/: config.js  install.sh  package.json  run.sh  server.js
src/: Model.cpp  a.out  conversions.c  conversions.h  imgarray.c  imgarray.h  scale.c  scale.h  segmentation_client.c  segmentation_client.h  segmentation_thread.c  segmentation_thread.h  test.c  virtual-background.c  virtual-background.h  yolact.cpp
src/data/: virtual-background.effect
